[gd_scene load_steps=31 format=3 uid="uid://o33urjc3n8t4"]

[ext_resource type="Script" path="res://scripts/person.gd" id="1_xvrq1"]
[ext_resource type="Shader" path="res://shaders/color_changer.gdshader" id="2_0ku03"]
[ext_resource type="Texture2D" uid="uid://d2vp1078mv7su" path="res://graphics/particles/symbol_01.png" id="2_h6mjv"]
[ext_resource type="Texture2D" uid="uid://e7yl0hwlr22p" path="res://graphics/people/Person.png" id="3_nkvey"]
[ext_resource type="Texture2D" uid="uid://bgacbhb75ple6" path="res://graphics/people/Faces.png" id="4_dv05q"]
[ext_resource type="PackedScene" uid="uid://dakwgp04xy1km" path="res://scenes/control/state_machine.tscn" id="4_p4c0u"]
[ext_resource type="Texture2D" uid="uid://bsdc80nrks0d0" path="res://graphics/people/Hair.png" id="5_0l0pt"]
[ext_resource type="PackedScene" uid="uid://dij47tttxg8vk" path="res://scenes/emote.tscn" id="6_7ykx4"]
[ext_resource type="Script" path="res://scripts/control/idle.gd" id="12_8ur6y"]
[ext_resource type="Script" path="res://scripts/control/walking.gd" id="13_1pe2b"]
[ext_resource type="Script" path="res://scripts/control/action.gd" id="14_s7jlf"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_smd44"]
resource_local_to_scene = true
shader = ExtResource("2_0ku03")
shader_parameter/newColor = Color(0.74902, 0.607843, 0.376471, 1)
shader_parameter/borderColor = Color(1, 1, 1, 1)
shader_parameter/width = 3.0
shader_parameter/showBorder = false

[sub_resource type="CircleShape2D" id="CircleShape2D_vtq0c"]

[sub_resource type="Animation" id="Animation_sbvn1"]
resource_name = "Action"
length = 2.0
step = 0.5
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"cause_effect"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PersonSprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PersonSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 4, 5]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PersonSprite:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="Animation_am212"]
resource_name = "Idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PersonSprite:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PersonSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PersonSprite:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="Animation_7eity"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PersonSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_pj00o"]
resource_name = "Walking"
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PersonSprite:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PersonSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PersonSprite:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dttf4"]
_data = {
"Action": SubResource("Animation_sbvn1"),
"Idle": SubResource("Animation_am212"),
"RESET": SubResource("Animation_7eity"),
"Walking": SubResource("Animation_pj00o")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_0bamr"]
animation = &"Action"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_q6oyi"]
animation = &"Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_cviro"]
animation = &"Walking"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_m0n4u"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_o0u3b"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_cph3q"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_n16tn"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_n4ldp"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ak7as"]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_6t351"]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_8qymb"]
states/Action/node = SubResource("AnimationNodeAnimation_0bamr")
states/Action/position = Vector2(490, -59)
states/Idle/node = SubResource("AnimationNodeAnimation_q6oyi")
states/Idle/position = Vector2(357, 100)
states/Walking/node = SubResource("AnimationNodeAnimation_cviro")
states/Walking/position = Vector2(637, 100)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_m0n4u"), "Idle", "Walking", SubResource("AnimationNodeStateMachineTransition_o0u3b"), "Walking", "Idle", SubResource("AnimationNodeStateMachineTransition_cph3q"), "Idle", "Action", SubResource("AnimationNodeStateMachineTransition_n16tn"), "Walking", "Action", SubResource("AnimationNodeStateMachineTransition_n4ldp"), "Action", "Idle", SubResource("AnimationNodeStateMachineTransition_ak7as"), "Action", "Walking", SubResource("AnimationNodeStateMachineTransition_6t351")]
graph_offset = Vector2(-54, -95)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ok6tu"]
size = Vector2(38, 104)

[node name="Person" type="CharacterBody2D"]
collision_mask = 0
input_pickable = true
script = ExtResource("1_xvrq1")

[node name="PersonSprite" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_smd44")
scale = Vector2(0.4, 0.4)
texture = ExtResource("3_nkvey")
flip_h = true
hframes = 4
vframes = 2

[node name="FaceSprite" type="Sprite2D" parent="."]
scale = Vector2(0.4, 0.4)
texture = ExtResource("4_dv05q")
flip_h = true
hframes = 2

[node name="HairSprite" type="Sprite2D" parent="."]
scale = Vector2(0.4, 0.4)
texture = ExtResource("5_0l0pt")
flip_h = true
hframes = 2

[node name="Emote" parent="." instance=ExtResource("6_7ykx4")]
position = Vector2(0, -67)

[node name="EffectArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EffectArea"]
visible = false
scale = Vector2(15, 15)
shape = SubResource("CircleShape2D_vtq0c")

[node name="EffectParticles" type="CPUParticles2D" parent="EffectArea"]
process_thread_group = 2
process_thread_group_order = 0
process_thread_messages = 2
position = Vector2(0, -29)
emitting = false
amount = 50
one_shot = true
explosiveness = 0.29
randomness = 0.7
fixed_fps = 30
draw_order = 1
texture = ExtResource("2_h6mjv")
emission_shape = 3
emission_rect_extents = Vector2(1, 1)
direction = Vector2(0, -1)
gravity = Vector2(0, 0)
initial_velocity_min = 150.0
initial_velocity_max = 150.0
scale_amount_min = 0.1
scale_amount_max = 0.3
color = Color(0.937255, 0.486275, 0.501961, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
process_thread_group = 2
process_thread_group_order = 0
process_thread_messages = 1
libraries = {
"": SubResource("AnimationLibrary_dttf4")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
libraries = {
"": SubResource("AnimationLibrary_dttf4")
}
tree_root = SubResource("AnimationNodeStateMachine_8qymb")
anim_player = NodePath("../AnimationPlayer")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 7)
shape = SubResource("RectangleShape2D_ok6tu")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="EffectTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="ActionTimer" type="Timer" parent="."]
one_shot = true

[node name="Label" type="Label" parent="."]
offset_left = -29.0
offset_top = -55.0
offset_right = 30.0
offset_bottom = -32.0
text = "Normal"

[node name="StateMachine" parent="." node_paths=PackedStringArray("character", "animationTree", "currentState") instance=ExtResource("4_p4c0u")]
character = NodePath("..")
animationTree = NodePath("../AnimationTree")
currentState = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("12_8ur6y")

[node name="Walking" type="Node" parent="StateMachine"]
script = ExtResource("13_1pe2b")

[node name="Action" type="Node" parent="StateMachine"]
script = ExtResource("14_s7jlf")

[node name="PersonNavigationAgent" type="NavigationAgent2D" parent="."]
process_thread_group = 2
process_thread_group_order = 0
process_thread_messages = 2

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="body_entered" from="EffectArea" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="EffectArea" to="." method="_on_area_2d_body_exited"]
[connection signal="animation_finished" from="AnimationTree" to="StateMachine/Action" method="_on_animation_tree_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="EffectTimer" to="." method="_on_effect_timer_timeout"]
[connection signal="timeout" from="ActionTimer" to="." method="_on_action_timer_timeout"]
